syntax = "proto3";

package dev.restate;

service Greeter {
	rpc Greet(GreetRequest) returns (GreetResponse) {};

	rpc MultiWord(GreetRequest) returns (GreetResponse) {};

}

message GreetRequest {
	string name = 1;
}

message GreetResponse {
	string greeting = 1;
}

